Change frontend folder structure

--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -53,7 +53,7 @@
     <section class="Form my-4 mx-5">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="col-lg-1">
-          <img src="../logo_round.svg" class="img-fluid" alt="">
+          <img src="assets/logo_round.svg" class="img-fluid" alt="">
         </div>
         <a class="navbar-brand" href="#">Fanicon</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,18 +98,18 @@
               <tbody>
                 <tr>
                   <th scope="row">1</th>
-                  <td><img src="../leonardo.svg" alt=""><button class="btn1">Add</button></td>
-                  <td><img src="../leonardo (1).svg" alt=""><button class="btn1">Add</button></td>
+                  <td><img src="assets/leonardo.svg" alt=""><button class="btn1">Add</button></td>
+                  <td><img src="assets/leonardo (1).svg" alt=""><button class="btn1">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
-                  <td><img src="../dog-tag.svg" alt=""><button class="btn1">Add</button></td>
-                  <td><img src="../dog-tag (1).svg" alt=""><button class="btn1">Add</button></td>
+                  <td><img src="assets/dog-tag.svg" alt=""><button class="btn1">Add</button></td>
+                  <td><img src="assets/dog-tag (1).svg" alt=""><button class="btn1">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
-                  <td><img src="../valor (1).svg" alt=""><button class="btn1">Add</button></td>
-                  <td><img src="../valor.svg" alt=""><button class="btn1">Add</button></td>
+                  <td><img src="assets/valor (1).svg" alt=""><button class="btn1">Add</button></td>
+                  <td><img src="assets/valor.svg" alt=""><button class="btn1">Add</button></td>
                 </tr>
               </tbody>
             </table>
