--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -49,17 +49,12 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-lg-5">
-            <img src="../logo_round.svg" class="img-fluid" alt="">
+            <img src="assets/logo_round.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-7 px-5 pt-5">
             <h1 class="font-weight-bold py-3">Fanicon</h1>
-            <h4>Sign Up</h4>
+            <h4>Login</h4>
             <form>
-              <div class="form-row">
-                <div class="col-lg-7">
-                  <input type="text" placeholder="Dispalyname" class="form-control my-3 p-4">
-                </div>
-              </div>
               <div class="form-row">
                 <div class="col-lg-7">
                   <input type="email" placeholder="Email-Address" class="form-control my-3 p-4">
@@ -72,7 +67,7 @@
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <button type="button" class="btn1 mt-1 mb-2">Sign Up</button>
+                  <button type="button" class="btn1 mt-1 mb-2">Login</button>
                 </div>
               </div>
               <div class="form-row">
@@ -81,7 +76,7 @@
                 </div>
               </div>
               
-              <p>Already have an account? <a href="#">Login</a></p>
+              <p>Don't have an account? <a href="./signup.html">Sign Up</a></p>
             </form>
           </div>
         </div>
