--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-lg-5">
-            <img src="../logo_round.svg" class="img-fluid" alt="">
+            <img src="assets/logo_round.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-7 px-5 pt-5">
             <h1 class="font-weight-bold py-3">Welcome to FANICON</h1>
