Update Admin page & Editor page

--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -112,15 +112,27 @@
           </table>
           <div>
             <form>
-              <div class="form-group">
-                <textarea class="form-control" rows="20" id="editor"></textarea>
-              </div>
-              <button class="btn1" type="submit" type="submit">Save</button>
-              <button class="btn1 btn-outline-primary mr-1" type="reset">Delete</button>
               <form class="form-inline my-2 my-lg-0">
                 <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add</button>
               </form>
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td><img src="assets/leonardo.svg" alt=""></td>
+                    <td><img src="assets/leonardo (1).svg" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td><img src="assets/dog-tag.svg" alt=""></td>
+                    <td><img src="assets/dog-tag (1).svg" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td><img src="assets/valor (1).svg" alt=""></td>
+                    <td><img src="assets/valor.svg" alt=""></td>
+                  </tr>
+                </tbody>
+              </table>
             </form>
           </div>
         </div>
