--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -63,13 +63,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+              <a class="nav-link" href="home.html">Home <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Editor <span class="sr-only"></span></a>
+              <a class="nav-link" href="editor.html">Editor <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Designoverview <span class="sr-only"></span></a>
+              <a class="nav-link" href="designs.html">Designoverview <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">Buy VIP <span class="sr-only"></span></a>
