--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -56,12 +56,12 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <button type="button" class="btn1 mt-1 mb-2">Login</button>
+                  <a type="button" class="btn btn1 mt-1 mb-2" href="./login.html">Login</a>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <button type="button" class="btn1 mt-1 mb-2">Sign Up</button>
+                  <a type="button" class="btn btn1 mt-1 mb-2" href="./signup.html">Sign Up</a>
                 </div>
               </div>
             </form>
