--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -57,22 +57,22 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="text" placeholder="Dispalyname" class="form-control my-3 p-4">
+                  <input type="text" placeholder="Dispalyname" class="form-control my-3 p-4" id="name">
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="email" placeholder="Email-Address" class="form-control my-3 p-4">
+                  <input type="email" placeholder="Email-Address" class="form-control my-3 p-4" id="email">
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="password" placeholder="Password" class="form-control my-3 p-4">
+                  <input type="password" placeholder="Password" class="form-control my-3 p-4" id="password">
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <button type="button" class="btn1 mt-1 mb-2">Sign Up</button>
+                  <button type="button" class="btn1 mt-1 mb-2" id="btnSignup">Sign Up</button>
                 </div>
               </div>
               <div class="form-row">
@@ -81,7 +81,7 @@
                 </div>
               </div>
               
-              <p>Already have an account? <a href="#">Login</a></p>
+              <p>Already have an account? <a href="login.html">Login</a></p>
             </form>
           </div>
         </div>
@@ -92,7 +92,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+    <script src="js/signup.js" type="module"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
