--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -72,7 +72,7 @@
               <a class="nav-link" href="designs.html">Designoverview <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Logout <span class="sr-only"></span></a>
+              <a class="nav-link" href="index.html">Logout <span class="sr-only"></span></a>
             </li>
           </ul>
         </div>
