--- a/frontend/html/designs.html
+++ b/frontend/html/designs.html
@@ -67,10 +67,10 @@
               <a class="nav-link" href="designs.html">Designoverview <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Buy VIP <span class="sr-only"></span></a>
+              <a class="nav-link" href="vip.html">Buy VIP <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Logout <span class="sr-only"></span></a>
+              <a class="nav-link" href="index.html">Logout <span class="sr-only"></span></a>
             </li>
           </ul>
         </div>
