--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -85,6 +85,7 @@
           <div>
             <form>
               <div class="form-group">
+                <input class="textinput form-control mr-sm-2" type="designname" placeholder="Designname" aria-label="Designname">
                 <textarea class="form-control" rows="20" id="editor"></textarea>
               </div>
               <button class="btn1" type="submit" type="submit">Save</button>
