--- a/frontend/html/addicon.html
+++ b/frontend/html/addicon.html
@@ -41,10 +41,17 @@
         border: 1px solid;
         color: black;
       }
-      .btn{
-        border:white;
+      .btn2{
+        border: black;
+        outline: none;
+        height: 50px;
+        width: 100%;
+        background-color: gray;
+        color: black;
+        border-radius: 4px;
+        font-weight: bold;
       }
-      .btn:hover{
+      .btn2:hover{
         background: lightgray;
       }
     </style>
@@ -64,14 +71,34 @@
              <div>
              <h2 class="col-md-11 text-center">Add icon</h2>
              </div> 
-             <body>
+             <form>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input type="text" placeholder="Name" class="form-control my-3 p-4" id="name">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input type="text" placeholder="Theme" class="form-control my-3 p-4" id="theme">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input type="text" placeholder="Style" class="form-control my-3 p-4" id="style">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <textarea class="form-control" rows="10" id="svgcode" placeholder="SVG Code"></textarea>
+                </div>
+              </div>
               <div class="form-row">
                   <div class="col-md-11 text-center">
-                      <a type="button" href="home.html" class="btn btn-normal" >Cancel</a>
-                      <a type="button" class="btn btn-warning">Buy</a>
+                    <a class="btn btn-primary col-xs-5 pull-right mar" href="home.html">Cancel</a>
+                    <a class="btn btn-primary col-xs-5 pull-right mar" id="btnaddicon">Add</a>
                   </div>
               </div>
-          </body>
+             </form>
            </div>
            </div>
             <form>
@@ -85,6 +112,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="js/addicon.js" type="module"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
