--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -57,7 +57,7 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="text" placeholder="Dispalyname" class="form-control my-3 p-4" id="name">
+                  <input type="text" placeholder="Displayname" class="form-control my-3 p-4" id="name">
                 </div>
               </div>
               <div class="form-row">
