--- a/frontend/html/vip.html
+++ b/frontend/html/vip.html
@@ -68,7 +68,7 @@
               <div class="form-row">
                   <div class="col-md-11 text-center">
                       <a type="button" href="home.html" class="btn btn-normal" >Cancel</a>
-                      <a type="button" class="btn btn-warning">Buy</a>
+                      <a type="button" class="btn btn-warning" id="btnbuyvip">Buy</a>
                   </div>
               </div>
           </body>
@@ -85,7 +85,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+    <script src="js/login.js" type="module"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
