--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -83,34 +83,21 @@
       <h1 class="font-weight-bold py-3">Editor</h1>
         <div>
           <div>
-            <form>
+            <div>
               <div class="form-group">
                 <input class="textinput form-control mr-sm-2" type="designname" placeholder="Designname" aria-label="Designname">
                 <textarea class="form-control" rows="20" id="editor"></textarea>
               </div>
-              <button class="btn1" type="submit" type="submit">Save</button>
-              <button class="btn1 btn-outline-primary mr-1" type="reset">Delete</button>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </form>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td><img src="assets/leonardo.svg" alt=""><button class="btn1">Add</button></td>
-                  <td><img src="assets/leonardo (1).svg" alt=""><button class="btn1">Add</button></td>
-                </tr>
-                <tr>
-                  <td><img src="assets/dog-tag.svg" alt=""><button class="btn1">Add</button></td>
-                  <td><img src="assets/dog-tag (1).svg" alt=""><button class="btn1">Add</button></td>
-                </tr>
-                <tr>
-                  <td><img src="assets/valor (1).svg" alt=""><button class="btn1">Add</button></td>
-                  <td><img src="assets/valor.svg" alt=""><button class="btn1">Add</button></td>
-                </tr>
-              </tbody>
-            </table>
+              <button class="btn1">Save</button>
+              <button class="btn1 btn-outline-primary mr-1">Delete</button>
+              <div class="form-inline my-2 my-lg-0">
+                <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="txtSearchIcon">
+                <button class="btn btn-outline-success my-2 my-sm-0" id="btnSearchIcon">Search</button>
+              </div>
+            </div>
+            <div id="icons-add-container">
+
+            </div>
           </div>
         </div>
       </div>
@@ -120,7 +107,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+    <script src="js/editor.js" type="module"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
