--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -79,7 +79,7 @@
       </nav>
       <h1 class="font-weight-bold py-3">Admin</h1>
         <div>
-          <table class="table">
+          <table class="table" id="admintable">
             <thead class="thead-dark">
               <tr>
                 <th scope="col">Dispalyname</th>
@@ -89,51 +89,31 @@
             </thead>
             <tbody>
               <tr>
-                <td>Lana Ming</td>
-                <td>lanaming@email.ch</td>
-                <td>Admin</td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
               <tr>
-                <td>Jacob Balisong</td>
-                <td>jacobbalisong@email.ch</td>
-                <td>Admin</td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
               <tr>
-                <td>Fritzli</td>
-                <td>fritzli@email.ch</td>
-                <td>User</td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
               <tr>
-                <td>Cole Sprouse</td>
-                <td>colesprouse@email.ch</td>
-                <td>VIP</td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
             </tbody>
           </table>
           <div>
             <form>
               <form class="form-inline my-2 my-lg-0">
-                <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 <a href="addicon.html" class="btn btn-outline-success my-2 my-sm-0" type="submit">Add</a>
-              </form>
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <td><img src="assets/leonardo.svg" alt=""></td>
-                    <td><img src="assets/leonardo (1).svg" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td><img src="assets/dog-tag.svg" alt=""></td>
-                    <td><img src="assets/dog-tag (1).svg" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td><img src="assets/valor (1).svg" alt=""></td>
-                    <td><img src="assets/valor.svg" alt=""></td>
-                  </tr>
-                </tbody>
-              </table>
-            </form>
           </div>
         </div>
       </div>
@@ -143,6 +123,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="js/admintable.js" type="module"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
