--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -72,7 +72,7 @@
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <button type="button" class="btn1 mt-3 mb-5">Cancel</button>
+                  <a type="button" class="btn btn1 mt-1 mb-2" href="index.html">Cancel</a>
                 </div>
               </div>
               
