--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -82,32 +82,12 @@
           <table class="table" id="admintable">
             <thead class="thead-dark">
               <tr>
-                <th scope="col">Dispalyname</th>
+                <th scope="col">Displayname</th>
                 <th scope="col">Email</th>
                 <th scope="col">Usergroup</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
+            <tbody id="userlist">
             </tbody>
           </table>
           <div>
@@ -123,7 +103,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="js/admintable.js" type="module"></script>
+    <script src="js/admin.js" type="module"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
