--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -46,6 +46,43 @@
       .textinput{
         margin-bottom: 5px;
       }
+      .iconCard{
+        box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.67);
+        -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.67);
+        -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.67);
+        width: 14rem; 
+        height: 18rem;
+        margin: 2rem;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+      }
+      .iconCard:hover{
+        transform: translateY(-5px) scale(1.005) translateZ(0);
+        transition: 100ms ease-in-out;
+      }
+
+      #icons-add-container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+      }
+      .iconCard svg {
+        width: 80%;
+        margin: 1rem;
+      }
+      .design-container{
+        width: 1200px;
+        height: 800px; 
+        box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67) inset;
+        -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67) inset;
+        -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67) inset;
+        border-radius: 10px;
+        padding: 10px;
+      }
     </style>
   </head>
   <body>
@@ -86,7 +123,7 @@
             <div>
               <div class="form-group">
                 <input class="textinput form-control mr-sm-2" type="designname" placeholder="Designname" aria-label="Designname">
-                <textarea class="form-control" rows="20" id="editor"></textarea>
+                <div class="design-container" id="designContainer"></div>
               </div>
               <button class="btn1">Save</button>
               <button class="btn1 btn-outline-primary mr-1">Delete</button>
@@ -96,7 +133,7 @@
               </div>
             </div>
             <div id="icons-add-container">
-
+              
             </div>
           </div>
         </div>
