--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -47,19 +47,19 @@
         margin-bottom: 5px;
       }
       .iconCard{
-        box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.67);
-        -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.67);
-        -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.67);
         width: 14rem; 
         height: 18rem;
         margin: 2rem;
-        border-radius: 10px;
         display: flex;
         align-items: center;
+        transition: ease-out;
       }
       .iconCard:hover{
-        transform: translateY(-5px) scale(1.005) translateZ(0);
+        transform: translateY(-1px) scale(1.005) translateZ(0);
         transition: 100ms ease-in-out;
+        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.67);
+        -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.67);
+        -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.67);
       }
 
       #icons-add-container{
@@ -75,13 +75,46 @@
         margin: 1rem;
       }
       .design-container{
-        width: 1200px;
-        height: 800px; 
+        width: 1440px;
+        height: 810px; 
         box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67) inset;
         -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67) inset;
         -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67) inset;
         border-radius: 10px;
         padding: 10px;
+        float: left;
+      }
+      .icon g{
+        fill: navy;
+      }
+      .optionsPanel{
+        margin: 10px;
+        float: left;
+        align-items: stretch;
+      }
+      .cardStyle{
+        box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67);
+        -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67);
+        -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.67);
+        border-radius: 10px;
+        padding: 10px;
+        margin: 20px;
+      }
+      #txtSearchIcon{
+        width: 32rem;
+      }
+      .spacer{
+        margin-top: 40px;
+        margin-bottom: 40px;
+        height: 0;
+        width: 100%;
+        border-top: 1px solid #444;
+      }
+      .editor{
+        overflow: hidden;
+      }
+      summary{
+        outline: none;
       }
     </style>
   </head>
@@ -118,26 +151,39 @@
         </div>
       </nav>
       <h1 class="font-weight-bold py-3">Editor</h1>
-        <div>
-          <div>
-            <div>
-              <div class="form-group">
-                <input class="textinput form-control mr-sm-2" type="designname" placeholder="Designname" aria-label="Designname">
-                <div class="design-container" id="designContainer"></div>
+        <main>
+          <div class="editor">
+            <div class="design-container" id="designContainer"></div>
+            <div class="optionsPanel">
+              <details class="cardStyle">
+                <summary>Color settings</summary><br>
+                <label>Background</label><br>
+                <input type="color" id="inputBgColor"/><br>
+                <label>Icons</label><br>
+                <input type="color" id="inputIconColor"/>
+              </details>
+              <details class="cardStyle">
+                <summary>Size settings</summary><br>
+                <label>Icon Size</label><br>
+                <input type="range" id="inputIconSize"/><br>
+                <label>Spacing</label><br>
+                <input type="range" id="inputIconMargin"/>
+              </details>
+              <div class="cardStyle">
+                <input class="textinput form-control mr-sm-2" type="text" placeholder="Designname" aria-label="Designname">
+                <button class="btn1">Save</button>
               </div>
-              <button class="btn1">Save</button>
-              <button class="btn1 btn-outline-primary mr-1">Delete</button>
-              <div class="form-inline my-2 my-lg-0">
-                <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="txtSearchIcon">
-                <button class="btn btn-outline-success my-2 my-sm-0" id="btnSearchIcon">Search</button>
-              </div>
-            </div>
-            <div id="icons-add-container">
-              
             </div>
           </div>
-        </div>
-      </div>
+          <div class="spacer"></div>
+          <div class="form-inline my-2 my-lg-0">
+            <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="txtSearchIcon">
+            <button class="btn btn-outline-success my-2 my-sm-0" id="btnSearchIcon">Search</button>
+          </div>
+          <div id="icons-add-container"></div>
+        </main>
+
+        
     </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
