--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -52,14 +52,14 @@
         margin: 2rem;
         display: flex;
         align-items: center;
-        transition: ease-out;
+        transition: ease-in-out;
       }
       .iconCard:hover{
         transform: translateY(-1px) scale(1.005) translateZ(0);
         transition: 100ms ease-in-out;
-        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.67);
-        -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.67);
-        -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.67);
+        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.57);
+        -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.57);
+        -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.57);
       }
 
       #icons-add-container{
