--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -9,7 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <title>Fanicon</title>
-    <style>
+    <style id="styles">
+      .icon g{
+        fill: rgb(0, 0, 0);
+      }
+      .icon{
+        margin: 10px;
+      }
       *{
         padding: 0;
         margin: 0;
@@ -83,9 +89,6 @@
         border-radius: 10px;
         padding: 10px;
         float: left;
-      }
-      .icon g{
-        fill: navy;
       }
       .optionsPanel{
         margin: 10px;
