Implement delete icon from design

--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -167,6 +167,10 @@
             <div class="design-container" id="designContainer"></div>
             <div class="optionsPanel">
               <details class="cardStyle">
+                <summary>Instructions</summary><br>
+                <p>Click an icon to delete</p>
+              </details>
+              <details class="cardStyle">
                 <summary>Color settings</summary><br>
                 <label>Background</label><br>
                 <input type="color" id="inputBgColor"/><br>
