--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -57,12 +57,12 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="text" placeholder="Displayname" class="form-control my-3 p-4" id="name">
+                  <input type="text" placeholder="Displayname" class="form-control my-3 p-4" id="name" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="password" placeholder="Password" class="form-control my-3 p-4" id="password">
+                  <input type="password" placeholder="Password" class="form-control my-3 p-4" id="password" required>
                 </div>
               </div>
               <div class="form-row">
