--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -57,17 +57,17 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="text" placeholder="Displayname" class="form-control my-3 p-4" id="name">
+                  <input type="text" placeholder="Displayname" class="form-control my-3 p-4" id="name" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="email" placeholder="Email-Address" class="form-control my-3 p-4" id="email">
+                  <input type="email" placeholder="Email-Address" class="form-control my-3 p-4" id="email" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="password" placeholder="Password" class="form-control my-3 p-4" id="password">
+                  <input type="password" placeholder="Password" class="form-control my-3 p-4" id="password" required>
                 </div>
               </div>
               <div class="form-row">
