--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -197,10 +197,22 @@
                 <label>Spacing</label><br>
                 <input type="range" id="inputIconMargin" min="0" max="100" value="10"/>
               </details>
-              <div class="cardStyle optionSection">
-                <input class="textinput form-control mr-sm-2" type="text" placeholder="Designname" aria-label="Designname">
-                <button class="btn1">Save</button>
-              </div>
+
+              <div id="saveControl"></div>
+
+              <script type="module" async>
+                import { isUserGroupThenWriteAtId } from './js/helper.js';
+
+                isUserGroupThenWriteAtId('VIP', `<div class="cardStyle optionSection">
+                    <input class="textinput form-control mr-sm-2" type="text" placeholder="Designname" aria-label="Designname">
+                    <button class="btn1">Save</button>
+                  </div>`, 'saveControl')
+                isUserGroupThenWriteAtId('ADMIN', `<div class="cardStyle optionSection">
+                  <input class="textinput form-control mr-sm-2" type="text" placeholder="Designname" aria-label="Designname">
+                  <button class="btn1">Save</button>
+                </div>`, 'saveControl')
+              </script>
+              
             </div>
           </div>
           <div class="spacer"></div>
@@ -218,7 +230,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="js/editor.js" type="module"></script>
+    <script src="./js/editor.js" type="module"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
