--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -23,10 +23,6 @@
         background:white;
         border-radius: 30px;
       }
-      img{
-        border-top-left-radius: 30px;
-        border-bottom-left-radius: 30px;
-      }
       .btn1{
         border: white;
         outline: none;
@@ -70,6 +66,31 @@
         </div>
       </div>
     </section>
+    <section class="Form my-4 mx-5">              
+    <div class="form-row">
+      <div class="col-lg-10">
+    <img src="assets/mushrooms.jpg" class="img-fluid" alt="">
+    <br>
+    <a type="text">Vielen Dank an unseren Sponsor Mushrooms ©pixabay</a> 
+      </div>
+    </div>
+    <br>
+    <div class="form-row">
+      <div class="col-lg-10">
+    <img src="assets/Editorpres.PNG" class="img-fluid" alt="">
+    <br>
+    <a type="text">Melde dich an und braucht den Editor um dein eigenes Design zu erstellen.</a> 
+      </div>
+    </div>
+    <br>
+    <div class="form-row">
+      <div class="col-lg-10">
+    <img src="assets/BuyVIPpres.PNG" class="img-fluid" alt="">
+    <br>
+    <a type="text">Kaufe dir VIP damit du dein Design später auch speichern kannst.</a> 
+      </div>
+    </div>
+  </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
