--- a/frontend/html/designs.html
+++ b/frontend/html/designs.html
@@ -49,7 +49,7 @@
     <section class="Form my-4 mx-5">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="col-lg-1">
-          <a href="./index.html"><img src="assets/logo_round.svg" class="img-fluid navLogo" alt=""></a>
+          <a href="./index.html"><img src="assets/logo_round.svg" class="img-fluid navLogo" alt="Fanicon flame logo"></a>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
