--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -38,6 +38,10 @@
         border: 1px solid;
         color: black;
       }
+      .picture{
+        border-radius: 30px;
+        margin-top: 10px;
+      }
     </style>
   </head>
   <body>
@@ -46,7 +50,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-lg-5">
-            <img src="assets/logo_round.svg" class="img-fluid" alt="">
+            <img src="assets/logo_round.svg" class="container" alt="">
           </div>
           <div class="col-lg-7 px-5 pt-5">
             <h1 class="font-weight-bold py-3">Welcome to FANICON</h1>
@@ -66,31 +70,36 @@
         </div>
       </div>
     </section>
-    <section class="Form my-4 mx-5">              
-    <div class="form-row">
-      <div class="col-lg-10">
-    <img src="assets/mushrooms.jpg" class="img-fluid" alt="">
-    <br>
-    <a type="text">Vielen Dank an unseren Sponsor Mushrooms ©pixabay</a> 
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="form-row">
+            <div class="col-lg-10">
+              <div class="col-lg-5">
+               <img src="assets/mushrooms.jpg" class="picture img-fluid" alt="">
+              </div>
+          <a type="text">Vielen Dank an unseren Sponsor Mushrooms ©pixabay</a> 
+            </div>
+          </div>
+          <br>
+          <div class="form-row">
+            <div class="col-lg-10">
+          <img src="assets/Editorpres.PNG" class="img-fluid" alt="">
+          <br>
+          <a type="text">Melde dich an und braucht den Editor um dein eigenes Design zu erstellen.</a> 
+            </div>
+          </div>
+          <br>
+          <div class="form-row">
+            <div class="col-lg-10">
+          <img src="assets/BuyVIPpres.PNG" class="img-fluid" alt="">
+          <br>
+          <a type="text">Kaufe dir VIP damit du dein Design später auch dein Projekt speichern kannst und schau es dir später in der Designübersicht an.</a> 
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <br>
-    <div class="form-row">
-      <div class="col-lg-10">
-    <img src="assets/Editorpres.PNG" class="img-fluid" alt="">
-    <br>
-    <a type="text">Melde dich an und braucht den Editor um dein eigenes Design zu erstellen.</a> 
-      </div>
-    </div>
-    <br>
-    <div class="form-row">
-      <div class="col-lg-10">
-    <img src="assets/BuyVIPpres.PNG" class="img-fluid" alt="">
-    <br>
-    <a type="text">Kaufe dir VIP damit du dein Design später auch speichern kannst.</a> 
-      </div>
-    </div>
-  </section>
+    </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
