--- a/frontend/html/designs.html
+++ b/frontend/html/designs.html
@@ -93,24 +93,8 @@
         </div>
       </nav>
       <h1 class="font-weight-bold py-3">Designoverview</h1>
-        <div>
-          <div>
-            <div class="container">
-              <div class="row">
-             <div class="col-xs-2"></div>
-             <div>
-             <h1 class="col-xs-8 text-center">Choose your design</h1>
-             </div> 
-           </div>
-           </div>
-            <form>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </form>
-          </div>
-        </div>
+      <div class="container designCardContainer" id="designsContainer">
+        
       </div>
     </section>
 
@@ -118,11 +102,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+    <script src="./js/designs.js" type="module"></script>
   </body>
 </html>
