Add icon Color to backend

--- a/frontend/html/designs.html
+++ b/frontend/html/designs.html
@@ -10,7 +10,7 @@
     <link href="./css/stylesheet.css" rel="stylesheet">
 
     <title>Fanicon</title>
-    <style>
+    <style id="styles">
       *{
         padding: 0;
         margin: 0;
