--- a/frontend/html/vip.html
+++ b/frontend/html/vip.html
@@ -17,7 +17,7 @@
         box-sizing: border-box;
       }
       body{
-        background: white;
+        background: gray;
       }
       .row{
         background:white;
@@ -54,28 +54,30 @@
     
     <section class="Form my-4 mx-5">
       <div class="col-lg-1">
-        <form>
-      <h1 class="col-md-11 text-center">Buy VIP</h1>
-      </form>
-    </div>
-          <div>
-            <div class="container">
-              <div class="row">
-             <div class="col-xs-2"></div>
-             <div>
-             <h2 class="col-md-11 text-center">Buy VIP to safe your designs</h2>
-             </div> 
-             <body>
-              <div class="form-row">
-                  <div class="col-md-11 text-center">
-                      <a type="button" href="home.html" class="btn btn-normal" >Cancel</a>
-                      <a type="button" class="btn btn-warning" id="btnbuyvip">Buy</a>
-                  </div>
-              </div>
-          </body>
-           </div>
-           </div>
+        <h1 class="col-md-11 text-center">Buy VIP</h1>
+      </div>
+    </section>
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-lg-5">
+            <img src="assets/logo_round.svg" class="container" alt="">
+          </div>
+          <div class="col-lg-7 px-5 pt-5">
             <form>
+              <div class="form-row">
+                <div>
+                  <h2 class="col-md-11 text-center">Buy VIP to safe your designs</h2>
+                  </div> 
+                  <body>
+                   <div class="form-row">
+                       <div class="col-md-11 text-center">
+                           <a type="button" href="home.html" class="btn btn-normal" >Cancel</a>
+                           <a type="button" class="btn btn-warning" id="btnbuyvip">Buy</a>
+                       </div>
+                   </div>
+               </body>
+              </div>
             </form>
           </div>
         </div>
