--- a/frontend/html/editor.html
+++ b/frontend/html/editor.html
@@ -99,6 +99,7 @@
         justify-content: center;
         align-items: center;
         align-content: center;
+        overflow: hidden;
       }
       .optionsPanel{
         margin: 10px;
