--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -41,6 +41,7 @@
       .picture{
         border-radius: 30px;
         margin-top: 10px;
+        margin-bottom: 10px;
       }
     </style>
   </head>
@@ -70,32 +71,62 @@
         </div>
       </div>
     </section>
+
     <section class="Form my-4 mx-5">
       <div class="container">
         <div class="row no-gutters">
-          <div class="form-row">
-            <div class="col-lg-10">
-              <div class="col-lg-5">
-               <img src="assets/mushrooms.jpg" class="picture img-fluid" alt="">
+          <div class="col-lg-5">
+            <img src="assets/mushrooms.jpg" class="picture img-fluid cardStyle" alt="">
+           </div>
+          <div class="col-lg-7 px-5 pt-5">
+            <form>
+              <div class="form-row">
+                <div class="col-lg-5">
+                  <h1>Unser Sponsor</h1>
+                  <a type="text">Vielen Dank an unseren Sponsor Mushrooms ©pixabay</a> 
+                </div>
               </div>
-          <a type="text">Vielen Dank an unseren Sponsor Mushrooms ©pixabay</a> 
-            </div>
+            </form>
           </div>
-          <br>
-          <div class="form-row">
-            <div class="col-lg-10">
-          <img src="assets/Editorpres.PNG" class="img-fluid" alt="">
-          <br>
-          <a type="text">Melde dich an und braucht den Editor um dein eigenes Design zu erstellen.</a> 
-            </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-lg-5">
+            <img src="assets/Editorpres.PNG" class="picture img-fluid cardStyle" alt="">
+           </div>
+          <div class="col-lg-7 px-5 pt-5">
+            <form>
+              <div class="form-row">
+                <div class="col-lg-5">
+                  <h1>Der Editor</h1>
+                  <a type="text">Melde dich an und braucht den Editor um dein eigenes Design zu erstellen.</a>
+                </div>
+              </div>
+            </form>
           </div>
-          <br>
-          <div class="form-row">
-            <div class="col-lg-10">
-          <img src="assets/BuyVIPpres.PNG" class="img-fluid" alt="">
-          <br>
-          <a type="text">Kaufe dir VIP damit du dein Design später auch dein Projekt speichern kannst und schau es dir später in der Designübersicht an.</a> 
-            </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-lg-5">
+            <img src="assets/BuyVIPpres.PNG" class="picture img-fluid cardStyle" alt="">
+           </div>
+          <div class="col-lg-7 px-5 pt-5">
+            <form>
+              <div class="form-row">
+                <div class="col-lg-5">
+                  <h1>Buy VIP</h1>
+                  <a type="text">Kaufe dir VIP damit du dein Design später auch dein Projekt speichern kannst und schau es dir später in der Designübersicht an.</a> 
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
