--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -82,8 +82,8 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <h1>Unser Sponsor</h1>
-                  <a type="text">Vielen Dank an unseren Sponsor Mushrooms ©pixabay</a> 
+                  <h1>Our sponsor</h1>
+                  <a type="text">Many thanks to our sponsor Mushrooms ©pixabay</a> 
                 </div>
               </div>
             </form>
@@ -102,8 +102,8 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <h1>Der Editor</h1>
-                  <a type="text">Melde dich an und braucht den Editor um dein eigenes Design zu erstellen.</a>
+                  <h1>The Editor</h1>
+                  <a type="text">Sign up and use the editor to create your own design.</a>
                 </div>
               </div>
             </form>
@@ -123,7 +123,7 @@
               <div class="form-row">
                 <div class="col-lg-5">
                   <h1>Buy VIP</h1>
-                  <a type="text">Kaufe dir VIP damit du dein Design später auch dein Projekt speichern kannst und schau es dir später in der Designübersicht an.</a> 
+                  <a type="text">Buy VIP so you can save your design to your project later and view it later in the design overview.</a> 
                 </div>
               </div>
             </form>
