--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -4,55 +4,18 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="dark light">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="./css/stylesheet.css" rel="stylesheet">
 
     <title>Fanicon</title>
-    <style>
-      *{
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      body{
-        background: white;
-      }
-      .row{
-        background:white;
-        border-radius: 30px;
-      }
-      img{
-        border-top-left-radius: 30px;
-        border-bottom-left-radius: 30px;
-      }
-      .btn1{
-        border: white;
-        outline: none;
-        height: 40px;
-        width: 100%;
-        background-color: black;
-        color: white;
-        border-radius: 4px;
-        font-weight: bold;
-        margin-bottom: 7px;
-        margin-top: 4px;
-      }
-      .btn1:hover{
-        background: white;
-        border: 1px solid;
-        color: black;
-      }
-      .textinput{
-        margin-bottom: 5px;
-      }
-    </style>
   </head>
   <body>
     
     <section class="Form my-4 mx-5">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg overlay">
         <div class="col-lg-1">
           <a href="./index.html"><img src="assets/logo_round.svg" class="img-fluid navLogo" alt=""></a>
         </div>
@@ -100,7 +63,7 @@
       <h1 class="font-weight-bold py-3">Admin</h1>
         <div>
           <table class="table" id="admintable">
-            <thead class="thead-dark">
+            <thead class="">
               <tr>
                 <th scope="col">Displayname</th>
                 <th scope="col">Email</th>
@@ -110,10 +73,11 @@
             <tbody id="userlist">
             </tbody>
           </table>
+          <div class="spacer"></div>
           <div>
             <form>
               <form class="form-inline my-2 my-lg-0">
-                <a href="addicon.html" class="btn btn-outline-success my-2 my-sm-0" type="submit">Add</a>
+                <a href="addicon.html" class="btn button button-accent my-2 my-sm-0" type="submit">Add a new Icon</a>
           </div>
         </div>
       </div>
