--- a/frontend/html/designs.html
+++ b/frontend/html/designs.html
@@ -11,43 +11,11 @@
 
     <title>Fanicon</title>
     <style id="styles">
-      *{
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      body{
-        background: white;
-      }
-      .row{
-        background:white;
-        border-radius: 30px;
-      }
-      img{
-        border-top-left-radius: 30px;
-        border-bottom-left-radius: 30px;
-      }
-      .btn1{
-        border: white;
-        outline: none;
-        height: 50px;
-        width: 100%;
-        background-color: black;
-        color: white;
-        border-radius: 4px;
-        font-weight: bold;
-      }
-      .btn1:hover{
-        background: white;
-        border: 1px solid;
-        color: black;
-      }
     </style>
   </head>
   <body>
-    
     <section class="Form my-4 mx-5">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg overlay">
         <div class="col-lg-1">
           <a href="./index.html"><img src="assets/logo_round.svg" class="img-fluid navLogo" alt="Fanicon flame logo"></a>
         </div>
