--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,52 +4,19 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="dark light">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="./css/stylesheet.css" rel="stylesheet">
     
     <title>Fanicon</title>
-    <style>
-      *{
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      body{
-        background: gray;
-      }
-      .row{
-        background:white;
-        border-radius: 30px;
-      }
-      .btn1{
-        border: white;
-        outline: none;
-        height: 50px;
-        width: 100%;
-        background-color: black;
-        color: white;
-        border-radius: 4px;
-        font-weight: bold;
-      }
-      .btn1:hover{
-        background: white;
-        border: 1px solid;
-        color: black;
-      }
-      .picture{
-        border-radius: 30px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
-    </style>
   </head>
   <body>
     
     <section class="Form my-4 mx-5">
       <div class="container">
-        <div class="row no-gutters">
+        <div class="row no-gutters overlay">
           <div class="col-lg-5">
             <img src="assets/logo_round.svg" class="container" alt="">
           </div>
@@ -58,12 +25,12 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <a type="button" class="btn btn1 mt-1 mb-2" href="./login.html">Login</a>
+                  <a type="button" class="btn button width100 button-accent mt-1 mb-2 " href="./login.html">Login</a>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <a type="button" class="btn btn1 mt-1 mb-2" href="./signup.html">Sign Up</a>
+                  <a type="button" class="btn button width100 button-accent mt-1 mb-2" href="./signup.html">Sign Up</a>
                 </div>
               </div>
             </form>
@@ -74,10 +41,10 @@
 
     <section class="Form my-4 mx-5">
       <div class="container">
-        <div class="row no-gutters">
+        <div class="row no-gutters overlay">
           <div class="col-lg-5">
-            <img src="assets/mushrooms.jpg" class="picture img-fluid cardStyle" alt="">
-           </div>
+            <img src="assets/mushrooms.jpg" class="img-fluid cardStyle" alt="Mushrooms">
+          </div>
           <div class="col-lg-7 px-5 pt-5">
             <form>
               <div class="form-row">
@@ -94,10 +61,10 @@
 
     <section class="Form my-4 mx-5">
       <div class="container">
-        <div class="row no-gutters">
+        <div class="row no-gutters overlay">
           <div class="col-lg-5">
-            <img src="assets/Editorpres.PNG" class="picture img-fluid cardStyle" alt="">
-           </div>
+            <img src="assets/Editorpres.PNG" class="img-fluid cardStyle" alt="">
+          </div>
           <div class="col-lg-7 px-5 pt-5">
             <form>
               <div class="form-row">
@@ -114,10 +81,10 @@
 
     <section class="Form my-4 mx-5">
       <div class="container">
-        <div class="row no-gutters">
+        <div class="row no-gutters overlay">
           <div class="col-lg-5">
-            <img src="assets/BuyVIPpres.PNG" class="picture img-fluid cardStyle" alt="">
-           </div>
+            <img src="assets/BuyVIPpres.PNG" class="img-fluid cardStyle" alt="">
+          </div>
           <div class="col-lg-7 px-5 pt-5">
             <form>
               <div class="form-row">
