--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
+    <meta name="description" content="Fanicon - Create Designs from your favourite movies, series, games or anything else.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -34,7 +35,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./designs.html">Designoverview <span class="sr-only"></span></a>
             </li>
-            <div id="vipNavLink"></div>
+            <li id="vipNavLink"></li>
 
             <script type="module" async>
               import { isUserGroupThenWriteAtId } from './js/helper.js';
@@ -44,7 +45,7 @@
             </li>`, 'vipNavLink')
             </script>
           
-            <div id="adminNavLink"></div>
+            <li id="adminNavLink"></li>
 
             <script type="module" async>
               import { isUserGroupThenWriteAtId } from './js/helper.js';
@@ -61,24 +62,21 @@
         </div>
       </nav>
       <h1 class="font-weight-bold py-3">Admin</h1>
+      <div>
+        <table class="table" id="admintable">
+          <thead class="">
+            <tr>
+              <th scope="col">Displayname</th>
+              <th scope="col">Email</th>
+              <th scope="col">Usergroup</th>
+            </tr>
+          </thead>
+          <tbody id="userlist">
+          </tbody>
+        </table>
+        <div class="spacer"></div>
         <div>
-          <table class="table" id="admintable">
-            <thead class="">
-              <tr>
-                <th scope="col">Displayname</th>
-                <th scope="col">Email</th>
-                <th scope="col">Usergroup</th>
-              </tr>
-            </thead>
-            <tbody id="userlist">
-            </tbody>
-          </table>
-          <div class="spacer"></div>
-          <div>
-            <form>
-              <form class="form-inline my-2 my-lg-0">
-                <a href="addicon.html" class="btn button button-accent my-2 my-sm-0" type="submit">Add a new Icon</a>
-          </div>
+          <a href="addicon.html" class="btn button button-accent my-2 my-sm-0">Add a new Icon</a>
         </div>
       </div>
     </section>
