--- a/frontend/html/designs.html
+++ b/frontend/html/designs.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Fanicon - Create Designs from your favourite movies, series, games or anything else.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -34,7 +35,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="./designs.html">Designoverview <span class="sr-only"></span></a>
             </li>
-            <div id="vipNavLink"></div>
+            <li id="vipNavLink"></li>
 
             <script type="module" async>
               import { isUserGroupThenWriteAtId } from './js/helper.js';
@@ -44,7 +45,7 @@
             </li>`, 'vipNavLink')
             </script>
             
-            <div id="adminNavLink"></div>
+            <li id="adminNavLink"></li>
 
             <script type="module" async>
               import { isUserGroupThenWriteAtId } from './js/helper.js';
