--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
+    <meta name="description" content="Fanicon - Create Designs from your favourite movies, series, games or anything else.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -25,12 +26,12 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <a type="button" class="btn button width100 button-accent mt-1 mb-2 " href="./login.html">Login</a>
+                  <a class="btn button width100 button-accent mt-1 mb-2 " href="./login.html">Login</a>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-5">
-                  <a type="button" class="btn button width100 button-accent mt-1 mb-2" href="./signup.html">Sign Up</a>
+                  <a class="btn button width100 button-accent mt-1 mb-2" href="./signup.html">Sign Up</a>
                 </div>
               </div>
             </form>
@@ -50,7 +51,7 @@
               <div class="form-row">
                 <div class="col-lg-5">
                   <h1>Our sponsor</h1>
-                  <a type="text">Many thanks to our sponsor Mushrooms ©pixabay</a> 
+                  <p>Many thanks to our sponsor Mushrooms ©pixabay</p> 
                 </div>
               </div>
             </form>
@@ -70,7 +71,7 @@
               <div class="form-row">
                 <div class="col-lg-5">
                   <h1>The Editor</h1>
-                  <a type="text">Sign up and use the editor to create your own design.</a>
+                  <p>Sign up and use the editor to create your own design.</p>
                 </div>
               </div>
             </form>
@@ -90,7 +91,7 @@
               <div class="form-row">
                 <div class="col-lg-5">
                   <h1>Buy VIP</h1>
-                  <a type="text">Buy VIP so you can save your design to your project later and view it later in the design overview.</a> 
+                  <p>Buy VIP so you can save your design to your project later and view it later in the design overview.</p> 
                 </div>
               </div>
             </form>
