--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
+    <meta name="description" content="Fanicon - Create Designs from your favourite movies, series, games or anything else.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -22,16 +23,18 @@
           </div>
           <div class="col-lg-7 px-5 pt-5">
             <h1 class="font-weight-bold py-3">Fanicon</h1>
-            <h4>Login</h4>
+            <h2>Login</h2>
             <form>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="text" placeholder="Displayname" class="text-input my-3 p-4" id="name" required>
+                  <label for="name">Displayname</label>
+                  <input type="text" placeholder="Displayname" class="text-input p-4" id="name" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="password" placeholder="Password" class="text-input my-3 p-4" id="password" required>
+                  <label for="password">Password</label>
+                  <input type="password" placeholder="Password" class="text-input p-4" id="password" required>
                 </div>
               </div>
               <div class="form-row">
@@ -41,7 +44,7 @@
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <a type="button" class="btn button width100 mt-1 mb-2" href="index.html">Cancel</a>
+                  <a class="btn button width100 mt-1 mb-2" href="index.html">Cancel</a>
                 </div>
               </div>
               
