--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
+    <meta name="description" content="Fanicon - Create Designs from your favourite movies, series, games or anything else.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -26,27 +27,30 @@
             <form>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="text" placeholder="Displayname" class="text-input width100 my-3 p-4" id="name" required>
+                  <label for="name">Displayname</label>
+                  <input type="text" placeholder="Displayname" class="text-input width100 p-4" id="name" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="email" placeholder="Email-Address" class="text-input width100 my-3 p-4" id="email" required>
+                  <label for="email">Displayname</label>
+                  <input type="email" placeholder="Email-Address" class="text-input width100 p-4" id="email" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <input type="password" placeholder="Password" class="text-input width100 my-3 p-4" id="password" required>
+                  <label for="password">Displayname</label>
+                  <input type="password" placeholder="Password" class="text-input width100 p-4" id="password" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <button type="button" class="btn button button-accent width100 mt-1 mb-2" id="btnSignup">Sign Up</button>
+                  <button class="btn button button-accent width100 mt-1 mb-2" id="btnSignup">Sign Up</button>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <a type="button" class="btn button width100 mt-1 mb-2" href="./index.html">Cancel</a>
+                  <a class="btn button width100 mt-1 mb-2" href="./index.html">Cancel</a>
                 </div>
               </div>
               
