--- a/frontend/html/vip.html
+++ b/frontend/html/vip.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
+    <meta name="description" content="Fanicon - Create Designs from your favourite movies, series, games or anything else.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -27,8 +28,8 @@
                 </div> 
                 <div class="form-row">
                   <div class="col-md-11 text-center">
-                    <a type="button" class="btn button button-accent width100" id="btnbuyvip">Buy</a>
-                    <a type="button" href="home.html" class="btn button width100" >Cancel</a>
+                    <button class="btn button button-accent width100" id="btnbuyvip">Buy</button>
+                    <a href="home.html" class="btn button width100" >Cancel</a>
                   </div>
                 </div>
               </div>
