Fixed false naming in signup.html

--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -33,13 +33,13 @@
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <label for="email">Displayname</label>
+                  <label for="email">Email</label>
                   <input type="email" placeholder="Email-Address" class="text-input width100 p-4" id="email" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-lg-7">
-                  <label for="password">Displayname</label>
+                  <label for="password">Password</label>
                   <input type="password" placeholder="Password" class="text-input width100 p-4" id="password" required>
                 </div>
               </div>
